@@ -400,4 +400,34 @@ public class EarClippingTest extends AbstractDecomposeTest {
 		// the result should have n - 2 triangles shapes
 		TestCase.assertEquals(vertices.length - 2, result.size());
 	}
+	
+	/**
+	 * Tests the triangulation implementation against the zoom1 data file.
+	 * @since 3.1.9
+	 */
+	@Test
+	public void successZoom2() {
+		Vector2[] vertices = this.load(EarClippingTest.class.getResourceAsStream("/org/dyn4j/data/zoom2.dat"));
+		
+		// decompose the poly
+		List<? extends Convex> result = this.algo.decompose(vertices);
+		
+		// the result should have n - 2 triangles shapes
+		TestCase.assertTrue(result.size() <= vertices.length - 2);
+	}
+	
+	/**
+	 * Tests the triangulation implementation against the zoom1 data file.
+	 * @since 3.1.9
+	 */
+	@Test
+	public void triangulateSuccessZoom2() {
+		Vector2[] vertices = this.load(EarClippingTest.class.getResourceAsStream("/org/dyn4j/data/zoom2.dat"));
+		
+		// decompose the poly
+		List<? extends Convex> result = this.algo.triangulate(vertices);
+		
+		// the result should have n - 2 triangles shapes
+		TestCase.assertEquals(vertices.length - 2, result.size());
+	}
 }
