@@ -414,6 +414,21 @@ public class SweepLineTest extends AbstractDecomposeTest {
 	 * @since 3.1.9
 	 */
 	@Test
+	public void successZoom2() {
+		Vector2[] vertices = this.load(SweepLineTest.class.getResourceAsStream("/org/dyn4j/data/zoom2.dat"));
+		
+		// decompose the poly
+		List<? extends Convex> result = this.algo.decompose(vertices);
+		
+		// the result should have n - 2 triangles shapes
+		TestCase.assertTrue(result.size() <= vertices.length - 2);
+	}
+	
+	/**
+	 * Tests the triangulation implementation against the zoom1 data file.
+	 * @since 3.1.9
+	 */
+	@Test
 	public void triangulateSuccessZoom2() {
 		Vector2[] vertices = this.load(SweepLineTest.class.getResourceAsStream("/org/dyn4j/data/zoom2.dat"));
 		
